--- a/fpa/fp_web_admin/templates/contact.html
+++ b/fpa/fp_web_admin/templates/contact.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-	<div id="contents">
+	<div id="contents" class=infoText>
 		<div id="about">
 			<h1>Contact</h1>
 			<h2>FieldPrime Software</h2>
