--- a/fpa/fp_web_admin/templates/fieldprime.html
+++ b/fpa/fp_web_admin/templates/fieldprime.html
@@ -3,7 +3,7 @@
 class="active"
 {% endblock %}
 {% block content %}
-	<div id="contents">
+	<div id="contents" class=infoText>
 		<div id="about">
 			<h1>Welcome to FieldPrime</h1>
 			<h2>FieldPrime Software</h2>
