--- a/fpa/fp_web_admin/templates/news.html
+++ b/fpa/fp_web_admin/templates/news.html
@@ -3,7 +3,7 @@
 class="active"
 {% endblock %}
 {% block content %}
-	<div id="contents">
+	<div id="contents" class=infoText>
 		<div class="main">
 			<h1>News</h1>
 			<ul class="news">
