--- a/fpa/fp_web_admin/templates/uploadAttributes.html
+++ b/fpa/fp_web_admin/templates/uploadAttributes.html
@@ -3,14 +3,20 @@
 {% block dataContent %}
 <font color="red">{{msg}}</font>
 <h2>Reload Attributes</h2>
-<div class=not_too_wide>
+<div class="not_too_wide infoText">
+<p>
 Select a file containing attribute data for the trial.
 The file should have a similar format as the original trial upload file.
 It should be CSV, with a single header row, providing a name for each column,
 and then one line for each node in the trial (for which attributes are to be
 added). There must be columns for "row" and "column", to identify each node.
 And every other column will be assumed to be an attribute to be either added,
-or to overwrite an existing attribute of the same name. 
+or to overwrite an existing attribute of the same name.
+<p>
+Attributes can be of integer or text types. The type is deduced from the values:
+If all the values specified are valid integers then the attribute will have
+integer type, otherwise it will be text. Note attributes intended for specifying
+a walk order must be integer type.
 </div>
 <form enctype="multipart/form-data"
   onsubmit="return ValidateTraitForm()"
