--- a/fpa/fp_web_admin/templates/uploadAttributes.html
+++ b/fpa/fp_web_admin/templates/uploadAttributes.html
@@ -19,7 +19,7 @@ integer type, otherwise it will be text. Note attributes intended for specifying
 a walk order must be integer type.
 </div>
 <form enctype="multipart/form-data"
-  onsubmit="return ValidateTraitForm()"
+  action=""
   method="post">
 
 <p>Trial Plan CSV File: <input type="file" id='uploadFile_id' name="file"></p>
