--- a/fpa/fp_web_admin/templates/newTrial.html
+++ b/fpa/fp_web_admin/templates/newTrial.html
@@ -27,7 +27,7 @@ function validateTrialForm() {
   }
 }
 </script>
-
+<font color="red">{{msg}}</font>
 <form enctype="multipart/form-data"
   onsubmit="return validateTrialForm()"
   method="post">
