--- a/fpa/fp_web_admin/templates/news.html
+++ b/fpa/fp_web_admin/templates/news.html
@@ -7,6 +7,26 @@ class="active"
 		<div class="main">
 			<h1>News</h1>
 			<ul class="news">
+                <li>
+                    <div class="date">
+                        <p>
+                            <span>18/6</span>
+                            2014
+                        </p>
+                    </div>
+                    <h2>Deleting Trials<span>Michael Kirk</span></h2>
+                    <p>
+                        User can now delete unwanted trials. When you select a trial, there
+                        is a "Delete This Trial" button near the top of the page. You will
+                        be asked to confirm, and re-enter your password, just to be sure.
+                        Note deleting a trial means all scores, traits, etc created for that
+                        trial will be lost - so use with caution!
+                        <!-- If you need to link to more..
+                        <span><a href="??.html" class="more">Read More</a></span>
+                        -->
+                    </p>
+                </li>
+
 				<li>
 					<div class="date">
 						<p>
@@ -18,14 +38,14 @@ class="active"
 					<p>
 						For users with a login, there's now a place to add a contact name
                         and email address for the account (under the "Profile/Passwords" link
-                        on the left hand side once you log in). Please add a name and email 
+                        on the left hand side once you log in). Please add a name and email
                         address here so that we can contact you if necessary.
                         <!-- If you need to link to more..
                         <span><a href="??.html" class="more">Read More</a></span>
                         -->
 					</p>
 				</li>
-                
+
 				<li>
 					<div class="date">
 						<p>
@@ -41,7 +61,7 @@ class="active"
                         -->
 					</p>
 				</li>
-                
+
 				<li>
 					<div class="date">
 						<p>
@@ -72,7 +92,7 @@ class="active"
                       </ul>
 					</p>
 				</li>
-                
+
 			</ul>
 		</div>
 	</div>
