--- a/fpa/fp_web_admin/templates/base.html
+++ b/fpa/fp_web_admin/templates/base.html
@@ -18,6 +18,7 @@
 <!doctype html>
 <html>
 <head>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script>{% block javascript %}{% endblock %}</script>
   <link rel=stylesheet type=text/css href="{{ url_for('static', filename='fpStyle.css') }}">
   <title>{{ title }}</title>
