--- a/fpa/fp_web_admin/templates/profile.html
+++ b/fpa/fp_web_admin/templates/profile.html
@@ -18,8 +18,7 @@
   <form method="POST" action="{{url_for('urlUserDetails', userName=g.userName)}}?op=newpw">
     <p> The <i>Admin Password</i> is the password used to login to this web server to
       manage the trials. I.e. the one you must have used at some stage to get to this page.
-    <p> Enter your login name: <input type="text" name="login">
-    <p> Enter your current password: <input type=password name="password">
+    <p> Enter your current <i>Admin</i> password: <input type=password name="password">
     <p>Enter your new password: <input type=password name="newpassword1">
     <p>Confirm your new password: <input type=password name="newpassword2">
     <p> <input type="submit" value="Change Admin Password">
@@ -39,7 +38,6 @@
       manage the trials). The app password is less secure than the admin password (it could be retrieved
       from the scoring device with some effort), so this should not be set to the same value as the
       admin password.
-    <p> Enter your <i>Admin</i> login name: <input type="text" name="login">
     <p> Enter your current <i>Admin</i> password: <input type=password name="password">
     <p>Enter new <i>Scoring Device</i> password: <input type=password name="newpassword1">
     <p>Confirm new <i>Scoring Device</i> password: <input type=password name="newpassword2">
