--- a/fpa/fp_web_admin/templates/news.html
+++ b/fpa/fp_web_admin/templates/news.html
@@ -10,6 +10,27 @@ class="active"
                 <li>
                     <div class="date">
                         <p>
+                            <span>1/8</span>
+                            2014
+                        </p>
+                    </div>
+                    <h2>Version 0.2.1<span>Michael Kirk</span></h2>
+                    <p>
+                        New app version (0.2.1) available from the Download App page. There
+                        are a few small changes in here, but in particular the upload of photos
+                        from the app has been improved. This version does include changes to
+                        the database on the app. Which means before installing, please upload
+                        any data you haven't yet uploaded, and then delete the FieldPrime database
+                        on the device.
+                        <!-- If you need to link to more..
+                        <span><a href="??.html" class="more">Read More</a></span>
+                        -->
+                    </p>
+                </li>
+
+                <li>
+                    <div class="date">
+                        <p>
                             <span>18/6</span>
                             2014
                         </p>
