--- a/fpa/fp_web_admin/static/fpStyle.css
+++ b/fpa/fp_web_admin/static/fpStyle.css
@@ -166,7 +166,7 @@ h2 {
 }
 
 
-/* Paragraph styles, but this means text not in paragraph is styled differently 
+/* Paragraph styles, but this means text not in paragraph is styled differently
 p {
 	color: #585858;
 	font-size: 16px;
@@ -246,12 +246,12 @@ p a {
 }
 
 /*** data pages: ****************************************
- * 
+ *
  * The data section may be multiple columns side by side.
  * To have these equal height, we are using css tables.
  * dataWrapper is the table, and the columns (table-cells)
  * are dataLeftBar, dataContent, and dataContentHelp
- * 
+ *
  */
 
 .fred {
@@ -262,7 +262,7 @@ p a {
     width: 100%;
     display:table;
     word-wrap: normal;
-    overflow: hidden; 
+    overflow: hidden;
 }
 #dpwhWrapperMain {
     display:table-cell;
@@ -280,7 +280,7 @@ p a {
 #dataLeftBar {
     width: 150px;
     min-width: 150px;
-    display: table-cell;   
+    display: table-cell;
     vertical-align: top;    /* without this, vertical position is affected by html in
                              * dataContent (when using tables for equal column heights)
                              */
@@ -297,11 +297,11 @@ p a {
     width: 100%;
     padding: 15px;
     word-wrap: normal;
-    overflow: hidden; 
+    overflow: hidden;
 }
 
 .dataContentHelp{
-    vertical-align: top; 
+    vertical-align: top;
     display: table-cell;
     color:green;
     background: #ddeedd;
@@ -316,7 +316,7 @@ p a {
  * The button itself is styled as #helpButton below
  */
 .dataContentHelpButton{
-    vertical-align: top; 
+    vertical-align: top;
     display: table-cell;
     color:green;
     width:100pc;  /* NB, pc is NOT percent, but one sixth inch, so this is
@@ -391,3 +391,15 @@ border:solid 1px #aacfe4;*/
 width:200px;
 margin:2px 0 20px 10px;
 }
+
+/*** Tabs: ********************************************************************/
+/*body { font-size: 80%; font-family: 'Lucida Grande', Verdana, Arial, Sans-Serif; }*/
+ul#tabs { list-style-type: none; margin: 30px 0 0 0; padding: 0 0 0.3em 0; }
+ul#tabs li { display: inline; }
+ul#tabs li a { color: #42454a; background-color: #dedbde; border: 1px solid #c9c3ba; border-bottom: none; padding: 0.3em; text-decoration: none; }
+ul#tabs li a:hover { background-color: #f1f0ee; }
+ul#tabs li a.selected { color: #000; background-color: #f1f0ee; font-weight: bold; padding: 0.7em 0.3em 0.38em 0.3em; }
+div.tabContent { border: 1px solid #c9c3ba; padding: 0.5em; background-color: #f1f0ee; }
+div.tabContent.hide { display: none; }
+
+/******************************************************************************/
