--- a/fpa/fp_web_admin/templates/news.html
+++ b/fpa/fp_web_admin/templates/news.html
@@ -7,6 +7,30 @@ class="active"
 		<div class="main">
 			<h1>News</h1>
 			<ul class="news">
+
+                <li>
+                    <div class="date">
+                        <p>
+                            <span>9/9</span>
+                            2014
+                        </p>
+                    </div>
+                    <h2>Version 0.2.3<span>Michael Kirk</span></h2>
+                    <p>
+                        New app version (0.2.3) is available from the Download App page. There
+                        are a few bug fixes and improvements here. One improvement is that
+                        now to export, update, or delete a trial, you can do a long press on
+                        the trial name in the trial list on the main FieldPrime screen. (This
+                        is a bit more convenient than using the menus).
+                        <p>
+                        As usual you may need to delete the FieldPrime folder on your device.
+                        So make sure you have uploaded everything before upgrading!
+                        <!-- If you need to link to more..
+                        <span><a href="??.html" class="more">Read More</a></span>
+                        -->
+                    </p>
+                </li>
+
                 <li>
                     <div class="date">
                         <p>
