--- a/fpa/fp_web_admin/templates/newTrial.html
+++ b/fpa/fp_web_admin/templates/newTrial.html
@@ -8,7 +8,7 @@
 {% extends "dataPageWithHelp.html" %}
 
 {% block dataContentTop %}
-  <h2>Create New Trial</h2>
+  <h2 style='float:left'>Create New Trial</h2>
 {% endblock %}
 
 {% block dataContentMain %}
