--- a/fpa/fp_web_admin/templates/base.html
+++ b/fpa/fp_web_admin/templates/base.html
@@ -15,6 +15,9 @@
  # javascript
  #}
 
+{# Determine if anyone is logged in: #}
+{% set loggedIn = (g.userName and g.userName != 'unknown') %}
+
 <!doctype html>
 <html>
 <head>
@@ -24,59 +27,59 @@
   <script src="{{ url_for('static', filename='fplib.js') }}"></script>
   <script>{% block javascript %}{% endblock %}</script>
   <link rel=stylesheet type=text/css href="{{ url_for('static', filename='fpStyle.css') }}">
+  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/style.css') }}">
   <title>{{ title }}</title>
 </head>
 <body>
-
-  <!-- Header: ------------------------------------------------------------------------------>
-  <div id="header">
-    <img src="{{ url_for('static', filename='fpIcon.png') }}">
-    <b>CSIRO FieldPrime Server</b><br>
-
-    {# Determine if anyone is logged in: #}
-    {% set loggedIn = (g.userName and g.userName != 'unknown') %}
-
-    {# Login fields, or name of logged in user and logout button: #}
-    <div id="loginout">
-      {% if not loggedIn %} <!-- If there is NO user logged in: -->
-      <FORM method="POST" action="{{ url_for('urlMain') }}">
-        <b>Signin:</b>
-        User name: <input type="text" name="username">
-        Password: <input type=password name="password">
-        <input type="submit" value="Login">
-      </FORM>
-      {% else %} <!-- If there IS a user logged in: -->
-      Logged in as {{g.userName}}
-      <button  onClick="window.location=' {{ url_for('urlLogout') }}'">Logout</button>
-      {% endif %}
-    </div>
-
-    {#
-    Header Menu - note Home href depends on login state.
-    Note also we assume that if variable pagename is defined then
-    it specifies the page, and if not defined we are on the Home menu options
-    #}
-	<ul id="headerMenu">
+<div class="header">
+    <div class="banner">
+        <div class="banner-container">
+            <div class="brand">
+                <div class="logo">
+                    <h2>
+                        <a href="{{url_for('urlMain')}}" title="CSIRO Logo"></a>
+                    </h2>
+                </div>
+                <div class="title">FieldPrime Server</div>
+            </div>
+            <div class="fixed-menu">
+                <div class="menu">
+                    <ul>
       {# Add UserData page if use is logged in: #}
+                        <li class="mega-menu"><a href="http://www.csiro.au">CSIRO.au</a></li>
       {% if loggedIn %}
-	  <li {% if pagename is not defined %} class="active" {% endif %}>
-        <a href={{ url_for('urlUserHome', userName=g.userName) }}>User Data</a></li>
+    <li class="mega-menu {% if pagename is not defined %} active {% endif %}">
+        <a href={{ url_for('urlUserHome', userName=g.userName) }}>User Data.</a></li>
+      {% else %}
+      <li class="mega-menu" {% if pagename == 'fieldprime' %}class="active"{% endif %}><a href="{{ url_for('urlInfoPage', pagename='fieldprime') }}">Home. </a></li>
       {% endif %}
-	  <li {% if pagename == 'fieldprime' %}class="active"{% endif %}><a href="{{ url_for('urlInfoPage', pagename='fieldprime') }}">FieldPrime</a></li>
-	  <li {% if pagename == 'news' %}class="active"{% endif %}><a href="{{ url_for('urlInfoPage', pagename='news') }}">News</a></li>
-	  <li {% if pagename == 'about' %}class="active"{% endif %}><a href="{{ url_for('urlInfoPage', pagename='about') }}">About</a></li>
-	  <li {% if pagename == 'contact' %}class="active"{% endif %}><a href="{{ url_for('urlInfoPage', pagename='contact') }}">Contact</a></li>
-    </ul>
-  </div>
+                        <li class="mega-menu" {% if pagename == 'news' %}class="active"{% endif %}><a href="{{ url_for('urlInfoPage', pagename='news') }}">News.</a></li>
+                        <li class="mega-menu" {% if pagename == 'about' %}class="active"{% endif %}><a href="{{ url_for('urlInfoPage', pagename='about') }}">About.</a></li>
+                        <li class="mega-menu" {% if pagename == 'contact' %}class="active"{% endif %}><a href="{{ url_for('urlInfoPage', pagename='contact') }}">Contact.</a></li>
+                        <li class="mega-menu">
+                          {% if loggedIn %}
+                            <a href="{{ url_for('urlLogout') }}">Log Out.</a>
+                          {% else %}
+                            <a href="{{url_for('urlMain')}}">Log In.</a>
+                          {% endif %}
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div id="userPanel"></div>
+    </div>
+</div>
   <!-- <hr> -->
 
-<!-- Content: ------------------------------------------------------------------------------->
+<!-- Content: ----------------------------------------------------------------------------- -->
 {% block content %}{% endblock %}
-
-<!-- Footer: -------------------------------------------------------------------------------->
+<!-- Footer: ------------------------------------------------------------------------------ -->
 <div id="footer">
+  <div class="banner-container">
   &copy; 2014 CSIRO
 </div>
+
 
 </body>
 </html>
