--- a/fpa/fp_web_admin/static/css/style.css
+++ b/fpa/fp_web_admin/static/css/style.css
@@ -9,7 +9,10 @@ a{
     text-decoration: none;
     color: #555;
 }
-.page{
+
+a:hover{
+    text-decoration: underline;
+    color: #000;
 }
 
 h1{
@@ -138,7 +141,7 @@ h3{
 
 .fixed-menu .menu ul li {
     float: left;
-    padding: 0px 0px 0px 12px;
+    padding: 0px 0px 0px 20px;
     margin: 0px;
 }
 
